Update order dependency parsers are retrieved so they are processed from deepest to shallowest order

--- a/test/Compiler.Dynamic.Tests/assets/test18/loadpagewithquery.aspx._0.html
+++ b/test/Compiler.Dynamic.Tests/assets/test18/loadpagewithquery.aspx._0.html
@@ -1,10 +1,9 @@
 
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <body>
-    <form method="post" action="/loadusercontrol.aspx" id="ctl00">
+    <form method="post" action="/loadpagewithquery.aspx" id="ctl00">
 <div class="aspNetHidden">
 <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJNjg2NDAyNjg4DxYCBRNWYWxpZGF0ZVJlcXVlc3RNb2RlAgFkZA==" />
 </div>
@@ -21,7 +20,7 @@
     
 <div class="aspNetHidden">
 
-	<input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="21EF433B" />
+	<input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="E5D0DEC1" />
 </div></form>
 
 </body>
